<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AdvanceControl">

    <LinearLayout
        android:id="@+id/display_control"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/panel_border"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/screen_control_panel"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnProjectorOff"
                style="@style/custom_button"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="@string/projector_off"
                android:textAllCaps="true"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnProjectorOn"
                style="@style/custom_button"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/projector_on"
                android:textAllCaps="true"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnWireless1"
                style="@style/custom_button"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="@string/tv_left_off"
                android:textAllCaps="true"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnTVLeft"
                style="@style/custom_button"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/tv_left_on"
                android:textAllCaps="true"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnTVRightOff"
                style="@style/custom_button"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="@string/tv_right_off"
                android:textAllCaps="true"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnTVRightOn"
                style="@style/custom_button"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/tv_right_on"
                android:textAllCaps="true"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/lblDisplayControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/display_control"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/screen_control_panel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/panel_border"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintEnd_toStartOf="@+id/menu_panel"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/display_control"
        app:layout_constraintTop_toTopOf="@id/display_control"
        android:visibility="invisible">

        <Button
            android:id="@+id/btnScreenUp"
            style="@style/custom_button"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:text="@string/screen_up"
            android:textAllCaps="true"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnScreenDown"
            style="@style/custom_button"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="5dp"
            android:text="@string/screen_down"
            android:textAllCaps="true"
            android:textSize="24sp" />



        <TextView
            android:id="@+id/lblScreenControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/screen_control"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_panel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/panel_border"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_marginHorizontal="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/screen_control_panel"
        app:layout_constraintTop_toTopOf="@id/screen_control_panel">

        <Button
            android:id="@+id/btnBack"
            style="@style/custom_button"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:text="@string/back"
            android:textAllCaps="true"
            android:textSize="24sp" />





    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/display_control"
        app:layout_constraintTop_toBottomOf="@+id/display_control"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        >
        <TextView android:id="@+id/txtProjectorStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="Projector Status: Not Connected" />

        <TextView android:id="@+id/txtTV1Status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="TV 1 Status: Not Connected" />

        <TextView android:id="@+id/txtTV2Status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="TV 2 Status: Not Connected" />

        <TextView android:id="@+id/txtMotorizeStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Motorize Screen Status: Not Connected" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>