<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.DisplayControl">

    <LinearLayout
        android:id="@+id/video_source"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/panel_border"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/audio_panel"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnWallHDMI"
                style="@style/custom_button"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="@string/wall_hdmi"
                android:textAllCaps="true"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnProjector"
                style="@style/custom_button"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/projector"
                android:textAllCaps="true"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnWireless1"
                style="@style/custom_button"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="@string/wireless1"
                android:textAllCaps="true"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnTVLeft"
                style="@style/custom_button"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/tv_left"
                android:textAllCaps="true"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnWireless2"
                style="@style/custom_button"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="@string/wireless2"
                android:textAllCaps="true"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnTVRight"
                style="@style/custom_button"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/tv_right"
                android:textAllCaps="true"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/lblVideoSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/video_source"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/audio_panel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/panel_border"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/menu_panel"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/video_source"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnWallHDMIAudio"
            style="@style/custom_button"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:text="@string/wall_hdmi"
            android:textAllCaps="true"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnWireless1Audio"
            style="@style/custom_button"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="5dp"
            android:text="@string/wireless1"
            android:textAllCaps="true"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnWireless2Audio"
            style="@style/custom_button"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="5dp"
            android:text="@string/wireless2"
            android:textAllCaps="true"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/lblAudio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/audio"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_panel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/panel_border"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/audio_panel"
        app:layout_constraintTop_toTopOf="@id/audio_panel">

        <Button
            android:id="@+id/btnAdvance"
            style="@style/custom_button"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:text="@string/advance"
            android:textAllCaps="true"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnShutdown"
            style="@style/custom_button"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="5dp"
            android:text="@string/pwr_shutdown"
            android:textAllCaps="true"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/video_source"
        app:layout_constraintTop_toBottomOf="@+id/video_source"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:flow_horizontalGap="2dp"
        >

        <TextView android:id="@+id/txtSwitchStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="Switcher Status: Not Connected" />




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>